25 Apr 2019 (0.43)
* Removed all uses of the environment variable VECTORCAST_DIR. From now on it
  is assumed that VectorCAST executables are on the system PATH. Legacy support
  is still maintained for older versions of VectorCAST.

25 Apr 2010 (0.42)
* Updates for corner cases, verbose out issue, and cleaning up previous build's
  files
* Problem when function coverage enabled, but not function call
* Function coverage format incorrect in XML causing plugin to throw an error
* Added catch for additional licensing errors
* Added catch for all (E) Line: errors in the console log

12 Apr 2019 (0.41)
* Fix for function and basis path coverage with VectorCAST 2019

10 Apr 2019 (0.40)
* Update to fix auto job updates (where path to Manage project was being
  removed)

19 Mar 2019 (0.39)
* Update to make the management report be generated for a cover project

23 Jan 2019 (0.38)
* Fix for spurious newline characters in report title in XML for Jenkins with
  VectorCAST 2019

10 Jan 2019 (0.37)
* Corrected missing " that could affect Linux jobs running
* Added support for generating unit and cover XML reports for Jenkins with
  VectorCAST 2019

26 Sept 2018 (0.36)
* Support overlapping version 17 manage projects
* Updates to support long directory pathing in VectorCAST/Manage reporting

15 May 2018 (0.35)
* Support newer versions of xUnit

10 May 2018 (0.34)
* Support newer versions of Multijob (1.30 onwards)

17 Jan 2018 (0.33)
* Don't create intermediate CSV file for bad test case management report 
* Raise post-groovy alert for bad test case management report

15 Jan 2018 (0.32)
* Change to cope with coverage without a unit, to avoid
  corrupted coverage xml file

13 Dec 2017 (0.31)
* Corrected redundant quote in Linux single job
* Corrected link from xUnit trend graph to results

5 Dec 2017 (0.30)
* Fixed regression with naming of archived execution and management reports
* Added VCAST_VC_SCRIPT environment variable that if set, will copy the scripts